--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-279.9KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇺🇸 美国-399.8KB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
-  - {name: 波兰-181.0KB/s(Youtube:不良林), server: 217.30.10.64, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇮🇳 印度-523.9KB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.05MB/s(Youtube:不良林), server: 134.195.196.150, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇷🇺 俄罗斯联邦-310.4KB/s(Youtube:不良林), server: 213.183.53.177, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇨🇳 中国-7.95MB/s(Youtube:不良林), server: mplsgz1.ggbbba.xyz, port: 45786, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
-  - {name: 🇦🇺 澳大利亚-2.40MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-947.0KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1260, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
   - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.56MB/s(Youtube:不良林), server: 134.195.196.150, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-990.7KB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
+  - {name: 🇸🇬 新加坡-572.7KB/s(Youtube:不良林), server: 139.99.123.156, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-360.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇩🇪 德国-3.33MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
+  - {name: 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-398.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-325.8KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1370, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-279.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.8KB/s(Youtube:不良林)
-      - 波兰-181.0KB/s(Youtube:不良林)
-      - 🇮🇳 印度-523.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-310.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-947.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-990.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-572.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-279.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.8KB/s(Youtube:不良林)
-      - 波兰-181.0KB/s(Youtube:不良林)
-      - 🇮🇳 印度-523.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-310.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-947.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-990.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-572.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-279.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.8KB/s(Youtube:不良林)
-      - 波兰-181.0KB/s(Youtube:不良林)
-      - 🇮🇳 印度-523.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-310.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-947.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-990.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-572.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-279.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.8KB/s(Youtube:不良林)
-      - 波兰-181.0KB/s(Youtube:不良林)
-      - 🇮🇳 印度-523.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-310.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-947.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-990.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-572.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-279.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.8KB/s(Youtube:不良林)
-      - 波兰-181.0KB/s(Youtube:不良林)
-      - 🇮🇳 印度-523.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-310.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-947.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-990.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-572.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-279.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.8KB/s(Youtube:不良林)
-      - 波兰-181.0KB/s(Youtube:不良林)
-      - 🇮🇳 印度-523.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-310.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-947.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-990.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-572.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-279.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.8KB/s(Youtube:不良林)
-      - 波兰-181.0KB/s(Youtube:不良林)
-      - 🇮🇳 印度-523.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-310.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-947.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-990.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-572.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
