--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-572.7KB/s(Youtube:不良林), server: 139.99.123.156, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇮🇳 印度-1.61MB/s(Youtube:不良林), server: 159.65.157.70, port: 61548, type: ss, cipher: chacha20-ietf-poly1305, password: 1c0e4a18-4d7a-4231-a55d-1dee0fe6732a}
-  - {name: 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.72MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇦 加拿大-2.95MB/s(Youtube:不良林), server: 134.195.196.150, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-360.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-398.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-325.8KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1370, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-176.3KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇮🇳 印度-1.43MB/s(Youtube:不良林), server: 159.65.157.70, port: 61548, type: ss, cipher: chacha20-ietf-poly1305, password: 1c0e4a18-4d7a-4231-a55d-1dee0fe6732a}
+  - {name: 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇸🇬 新加坡-153.1KB/s(Youtube:不良林), server: 103.172.116.9, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇨🇦 加拿大-2.60MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.21MB/s(Youtube:不良林), server: 134.195.196.150, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇸🇬 新加坡-432.0KB/s(Youtube:不良林), server: 139.99.123.156, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇬🇧 英国-1.41MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.36MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-572.7KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-153.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-432.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.41MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.36MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-572.7KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-153.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-432.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.41MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.36MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-572.7KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-153.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-432.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.41MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.36MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-572.7KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-153.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-432.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.41MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.36MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-572.7KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-153.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-432.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.41MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.36MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-572.7KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-153.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-432.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.41MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.36MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-572.7KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-176.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.43MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-153.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-432.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.41MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.36MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
